--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Artem Shanin",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
